@@ -1,4 +1,6 @@
 2006-12-14 Kurt Maute <Kurt@Maute.us>
+	* src/planner-window.c:  use ngettext for translation of plural.  Bug
+	# 345163, patch contributed by Arthur Petitpierre
 	* data/stylesheets/html1_css.xsl:  fix row height alignment of gantt
 	on html export when viewed in Internet Explorer.  Bug # 332748, patch
 	contributed by Nico de Groot
